--- a/po/hu_HU/common-base.po
+++ b/po/hu_HU/common-base.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:21+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3322,7 +3322,7 @@ msgstr "Kapcsolat információ"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "You do not have permission to edit relationships for this contact."
-msgstr ""
+msgstr "Nincs jogosultsága ezen kapcsolat viszonyainak szerkesztéséhez."
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Relationships for"
@@ -5816,7 +5816,7 @@ msgstr "%1 érvényes weboldalnak kell lennie. "
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "Cannot create custom table because %1 is already a core table."
-msgstr ""
+msgstr "Nem hozhatja létre az egyedi táblát, mert %1 egy alaptábla."
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "%1 Questions"
@@ -7827,17 +7827,17 @@ msgstr "Kulcs nincs beállítva erre a fizetés feldolgozóra."
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Subscription payment failed - %1"
-msgstr ""
+msgstr "Előfizetési befizetés meghiusult - 1%"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid ""
 "Recurring contribution appears to have been re-assigned from id %1 to %2, "
 "continuing with %2."
-msgstr ""
+msgstr "Úgy látszik, hogy az Ismétlődő befizetés átirányításra kerülhetett 1% azonosítótól a %2 azonosítóhoz, ahonnan folytatódni fog."
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Could not find contributionRecur id: %1"
-msgstr ""
+msgstr "Nem találom a contributionRecur id: %1"
 
 #: CRM/Core/Payment/BaseIPN.php CRM/Core/Payment/GoogleIPN.php
 msgid "Online Contribution"
@@ -8229,11 +8229,11 @@ msgstr "eWAY Gateway URL nincs beállítva ehhez a fizetési feldolgozóhoz"
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor %1 were found."
-msgstr ""
+msgstr "Nem találom a %1 aktív példányát a befizetés feldolgozónak."
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor '%1' were found."
-msgstr ""
+msgstr "Nem találom az '%1' aktív példányait a fizetés feldolgozónak."
 
 #: CRM/Core/Permission.php CRM/Logging/ReportDetail.php
 #: templates/CRM/common/joomla.tpl templates/CRM/common/print.tpl
@@ -11270,7 +11270,7 @@ msgstr "ez csak egy interfész nem hívható közvetlenül"
 msgid ""
 "Timestamps reported by MySQL (eg \"%2\") and PHP (eg \"%3\" ) are "
 "mismatched.<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "A MYSQL által jelentett időbélyeg (\"%2\") és a PHP időbélyege (\"%3\") különbözik.<br /><a href=\"%1\">Tudjon meg többet erről a figyelmeztetésről</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid "Environment Settings"
@@ -24913,7 +24913,7 @@ msgstr "Profil mező"
 
 #: CRM/UF/Form/Field.php
 msgid "You have already added a primary location field of this type: %1"
-msgstr ""
+msgstr "Már hozzáadta az elsődleges hely mezőt  ehhez a típushoz: %1"
 
 #: CRM/UF/Page/Group.php
 msgid "Use Profile-Listings Mode"
@@ -24923,7 +24923,7 @@ msgstr "Profil listázás mód használata"
 msgid ""
 "Case type \"%2\" has duplicate XML files (\"%3\" and \"%4\").<br /><a "
 "href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "\"%2\" ügy típus duplikált XML fájlokkal rendelkezik (\"%3\" és \"%4\").<br /><a href=\"%1\">Tudjon meg többet erről a figyelmeztetésről</a>"
 
 #: CRM/Utils/Check/Case.php
 msgid "CiviCase"
@@ -24933,7 +24933,7 @@ msgstr "CiviÜgy"
 msgid ""
 "Case type \"%2\" corresponds to XML file (\"%3\") The XML file should be "
 "named \"%4\".<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "A \"%2\" ügy típus a (\"%3\") XML fájlra hivatkozik. Az XML fájl nevének \"%4\" kell lennie.<br /><a href=\"%1\">Tudjon meg többet erről a figyelmeztetésről</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid ""
@@ -25819,14 +25819,14 @@ msgstr[1] "%count tevékenység törölve."
 #: CRM/Activity/Form/Task/Delete.php
 msgid "1 could not be deleted."
 msgid_plural "%count could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 nem törölhető."
+msgstr[1] "%count nem törölhető."
 
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "%count activity un-tagged"
 msgid_plural "%count activities un-tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "% count tevékenység címkéi eltávolítva"
+msgstr[1] "%count tevékenységek címkéi eltávolítva"
 
 #: CRM/Activity/Page/AJAX.php CRM/Activity/Selector/Search.php
 msgid "Repeating (%1 of %2)"
@@ -25834,7 +25834,7 @@ msgstr "Ismétlés (%1 a %2 közül)"
 
 #: CRM/Contact/BAO/Query.php
 msgid "%1 is not a valid operator"
-msgstr ""
+msgstr "%1 nem érvényes operátor"
 
 #: CRM/Contact/BAO/Query.php CRM/Core/SelectValues.php
 msgid "Not Like"
@@ -25846,11 +25846,11 @@ msgstr "Kapcsolat altípus %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group(s) %1 %2"
-msgstr ""
+msgstr "Csoport(ok) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
-msgstr ""
+msgstr "Csoport állapot %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Greeting %1 %2"
@@ -25893,8 +25893,8 @@ msgstr "Résztvevő azonosító"
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Contact Subtype field of 1 contact has not been updated."
 msgid_plural "Contact Subtype field of %count contacts has not been updated."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Kapcsolat altípus mező 1 kapcsolatnál nem került frissítésre."
+msgstr[1] "Kapcsolat altípus mező %count kapcsolatoknál nem került frissítésre."
 
 #: CRM/Contact/Form/Task/Map.php
 msgid ""
@@ -25912,7 +25912,7 @@ msgstr "Azonosító. 51"
 
 #: CRM/Core/BAO/Address.php
 msgid "You seem to have deleted the relationship type 'Household Member of'"
-msgstr ""
+msgstr "Úgy tűnik, hogy törölte a 'Háztartás tagja' viszony típust"
 
 #: CRM/Core/BAO/Navigation.php
 msgid "Log out"
@@ -25936,15 +25936,15 @@ msgstr "Egyedi mező HTML típusa"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Job Log ID"
-msgstr ""
+msgstr "Munka napló azonosító"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Timestamp"
-msgstr ""
+msgstr "Időbélyeg"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Extended Data"
-msgstr ""
+msgstr "Kiterjesztett adat"
 
 #: CRM/Core/DAO/RecurringEntity.php
 msgid "Parent ID"
@@ -26106,7 +26106,7 @@ msgstr "Ismétlődő egyed"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Could not find contributionRecur id"
-msgstr ""
+msgstr "Nem található a contributionRecur azonosító"
 
 #: CRM/Core/Permission.php
 msgid "Create a new contact record in CiviCRM"
@@ -26267,11 +26267,11 @@ msgstr "üzenet sablonok szerkesztése"
 
 #: CRM/Core/Permission.php
 msgid "view my invoices"
-msgstr ""
+msgstr "számláim megtekintése"
 
 #: CRM/Core/Permission.php
 msgid "Allow users to view/ download their own invoices"
-msgstr ""
+msgstr "Felhasználók részére a számlák megtekintésének/letöltésének engedélyezése "
 
 #: CRM/Core/Resources.php
 msgid "Upcoming"
@@ -26350,21 +26350,21 @@ msgstr "Ármező utáni szöveg"
 msgid ""
 "Cannot add or update profile field \"%1\" with combination of Household or "
 "Organization or any subtypes of Household or Organization."
-msgstr ""
+msgstr "\"%1\" profilmezőt nem tudom hozzáadni vagy frissíteni a Háztartás vagy Szervezet vagy bármely Háztartás vagy Szervezet altípus kombinációval."
 
 #: CRM/UF/Page/ProfileEditor.php
 msgid "Free HTML"
-msgstr ""
+msgstr "Free HTML"
 
 #: CRM/UF/Page/ProfileEditor.php
 msgid "Formatting"
-msgstr ""
+msgstr "Formázás"
 
 #: CRM/Utils/Check/Security.php
 msgid ""
 "The system administrator has disabled security settings (%1). Connections to"
 " remote applications are insecure."
-msgstr ""
+msgstr "A rendszer adminisztrátor kikapcsolta a biztonsági beállításokat (%1). A távoli alkalmazás kapcsolatok nem bitonságosak."
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Event templates are not meant to be registered."
@@ -26405,7 +26405,7 @@ msgstr "Győződjön meg róla, hogy be van jelentkezve és van jogosultsága ez
 
 #: js/crm.ajax.js
 msgid "Print window"
-msgstr ""
+msgstr "Nyomtatási oldal"
 
 #: js/jquery/jquery.crmeditable.js packages/HTML/QuickForm/ckeditor.php
 #: packages/HTML/QuickForm/tinymce.php
@@ -26416,11 +26416,11 @@ msgstr "Kattintson a szerkesztéshez"
 
 #: js/model/crm.uf.js
 msgid "Markup"
-msgstr ""
+msgstr "Markup"
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Are you sure you want to delete "
-msgstr ""
+msgstr "Biztos abban, hogy törli"
 
 #: templates/CRM/Activity/Form/ActivityLinks.tpl
 msgid "New Activity"
@@ -26447,13 +26447,13 @@ msgstr "Kapcsolat típus: %1"
 msgid ""
 "This smart group will stay up-to-date with all contacts who meet the search "
 "criteria."
-msgstr ""
+msgstr "Ez az okos csoport frissített mard az összes olyan kapcsolattal, amely megfelel a keresési kritériumnak."
 
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
 msgid ""
 "NOTE: Even if only a few contacts have been selected from the search "
 "results, all contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "MEGJEGYZÉS: Ha néhány kapcsolat kerül csak kiválasztásra a keresés eredményéből az összes olyan kapcsolat, amely megfelel az alábbi kritériumoknak, a csoport része lesz."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -26581,7 +26581,7 @@ msgstr "Az ismétlődő eseményre regisztrált résztvevők eltávolításra ke
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "A repeating set will be created with the following dates."
-msgstr ""
+msgstr "Ismétlődő sorozat kerül létrehozásra a következő dátumokkal."
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "Start date"
@@ -26709,7 +26709,7 @@ msgid ""
 "you <a href=\"%1\" target=\"_blank\">support CiviCRM by becoming a "
 "member</a> or by <a href=\"%2\" target=\"_blank\">making a donation</a>. ~ "
 "Dave Greenberg, Co-Founder"
-msgstr ""
+msgstr "A CiviCRM alap csapat keményen dolgozott és büszkén bocsátotta ki a 4.6 változatot, 2015. első nagy frissítését. Habár újdonságokat tartalmaz és folyamatosan fejlődik a nonprofit szervezetek vezető nyílt forrású CiviCRM megoldása, az előállítása, karbantartása, frissítése költséges. Az ön szervezetéhez hasonlók anyagi támogatása nélkül, a további változatok létrehozása kockázatokkal néz szembe. Meghívjuk arra, hogy élvezze a 4.6 fejlesztéseit, és azt kérjük öntől,  hogy <a href=\"%1\" target=\"_blank\">támogassa a CiviCRM-t azzal, hogy belép tagnak</a> vagy <a href=\"%1\" target=\"_blank\">azzal, hogy adományoz</a>. ~ Dave Greenberg, társalapító"
 
 #: xml/templates/civicrm_data.tpl
 msgid "PCP owner notifications"
