--- a/po/tr_TR/admin.po
+++ b/po/tr_TR/admin.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 08:26+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1970,7 +1970,7 @@ msgstr "Bu kalıbı varsayılan duruma döndürme izniniz yok."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "İleti Kalıbı"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4855,7 +4855,7 @@ msgstr "Sistem iş akışı iletileri kalıpları, katılımcı ve yöneticilere
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "İş Akışı"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -4998,7 +4998,7 @@ msgstr "Henüz bu seçenek grubu için bir seçenek eklenmemiş. <a href='%1'>Bu
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "İşlem Tipleri"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -6357,23 +6357,23 @@ msgstr "Not: Seçilmiş etiket diğer varlıklar tarafından da kullanılıyor."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "\"%1\" yüklensin mi?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "\"%1\" indirilip yüklensin mi?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "\"%1\" kaldırılsın mı?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "\"%1\" eklentisini etkinleştir"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "\"%1\" eklentisini devre dışı bırak"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
@@ -6607,7 +6607,7 @@ msgstr "Site yöneticilerine tüm yeni CiviCRM sürümleri bildirilsin."
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr ""
+msgstr "reCAPTCHA tema ayarları virgül ile ayrılmış veriler şeklinde belirtilebilir. Örneğin theme: 'blackglass', lang: 'fr'."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6700,7 +6700,7 @@ msgstr "Alan seçin"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Auto-Select Current User"
-msgstr ""
+msgstr "Geçerli Kullanıcı Otomatik Seçilsin"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Explorer"
@@ -6743,7 +6743,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "'}Bu siteyi CiviCRM.org sitesine kayıt ettiniz mi? Henüz yapmadıysanız lütfen bir kaç dakikanızı ayırarak <a href=\"%1\" target=\"_blank\">site kayıt formunu doldurun</a> ve CiviCRM ekosisteminin güçlenmesine yardımcı olun. Toplanan bilgiler geliştirilecek alanlarla ilgili önceliklerin belirlenmesi, iletişimin yönlendirilerek topluluk oluşturulması için kullanılır. Bu sitede teknik bir rolünüz varsa lütfen teknik güncellemelerle ilgili haberleri alabilmek için \"İlişkiyi Koparmayın\" seçeneğini işaretlediğinize emin olun (az sayıda posta gönderilen bir posta listesidir)."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
