--- a/po/hu_HU/extension.po
+++ b/po/hu_HU/extension.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 10:32+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -81,7 +81,7 @@ msgstr "Nem tudom a kiterjesztések URL-jét meghatározni (%1). Kérem frissít
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Elemzési hiba a kiterjesztésben? %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -99,7 +99,7 @@ msgstr "A kiterjesztés URL nincs jól beállítva.  Kérem menjen az <a href=\"
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "A kiterjesztés könyvtára nincs beállítva, vagy nem írható. Kattintson <a href='%1'>ide</a> a kiterjesztés könyvtár beállításához."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
