--- a/po/hu_HU/financial.po
+++ b/po/hu_HU/financial.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 10:31+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgstr "Ezeket a kapcsolat(oka)t nem lehet véglegesen törölni, mert a kapcsol
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "A következő táblákban van egy bejegyzés erre a pénzügyi típusra: %1"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -333,7 +333,7 @@ msgid ""
 " account '%2'. That income account, along with standard financial accounts "
 "'%3', '%4' and '%5' have been linked to the financial type. You may edit or "
 "replace those relationships here."
-msgstr ""
+msgstr "Az ön '%1' pénzügyi típusa létrehozva, a kapcsolódó '%2' bevételi számlával együtt. Ez a bevételi számla, a szabványos számlákkal '%3', '%4' és '%5' együtt hozzárendelve a pénzügyi típushoz. Itt szerkesztheti vagy kicserélheti ezeket."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 #: templates/CRM/Financial/Page/FinancialType.tpl
@@ -896,7 +896,7 @@ msgid ""
 "Your Financial \"%1\" Type has been created and assigned to an existing "
 "financial account with the same title. You should review the assigned "
 "account and determine whether additional account relationships are needed."
-msgstr ""
+msgstr "Az ön '%1' pénzügyi típusa létrehozva, és egy meglévő pénzügyi számlához hozzárendelve, azonos névvel. Nézze át a hozzárendelt számlát, és határozza meg, hogy szükségesek-e még  további kiegészítő számla kapcsolatok is. "
 
 #: CRM/Financial/Form/FinancialType.php
 msgid ""
@@ -904,7 +904,7 @@ msgid ""
 "income account \"%2\". That income account, along with standard financial "
 "accounts \"%3\", \"%4\" and \"%5\" have been linked to the financial type. "
 "You may edit or replace those relationships here."
-msgstr ""
+msgstr "Az ön '%1' pénzügyi típusa létrehozva, a kapcsolódó '%2' bevételi számlával együtt. Ez a bevételi számla, a szabványos számlákkal '%3', '%4' és '%5' együtt hozzárendelve a pénzügyi típushoz. Itt szerkesztheti vagy kicserélheti ezeket."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Financial Type Account"
@@ -940,19 +940,19 @@ msgstr "Feldolgozó típus leírás"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Created ID"
-msgstr ""
+msgstr "Létrehozott azonosító "
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Lejárati dátum"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
-msgstr ""
+msgstr "Maszkolt számla szám"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "IP cím"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Taxable accounts should have Financial Account Type set to Liability."
