--- a/po/hu_HU/event.po
+++ b/po/hu_HU/event.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:20+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1675,7 +1675,7 @@ msgstr "Az esemény sablon kiválasztásakor ezt a címet látják a felhasznál
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Sablon"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -3741,7 +3741,7 @@ msgstr "Tranzakció befejezése"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Alapértelmezett szerepkör azonosító"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
@@ -3857,13 +3857,13 @@ msgstr "Az ön részére szerkeszthető résztvevők és események törlése "
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "esemény profilok kezelése"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Engedélyezi a felhasználóknak az online esemény regisztrációhoz használt,  eseményhez kapcsolódó profil űrlapok létrehozását, szerkesztését, másolását."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
@@ -3931,7 +3931,7 @@ msgstr "Összes adó"
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "MEGJEGYZÉS: Ezen keresési eredményben kiválasztott kapcsolatok kijelölése nem releváns itt, az összes olyan kapcsolat, amely megfelel a kritériumoknak a csoport része lesz. "
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
@@ -3944,7 +3944,7 @@ msgstr "Gyermek"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Összes résztvevő"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
