--- a/po/hu_HU/pledge.po
+++ b/po/hu_HU/pledge.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:48+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -846,11 +846,11 @@ msgstr "Kattintson a  <a %1>Felajánlás hozzáadása</a> gombra hogy rögzítse
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "Kapcsolat azonosító %1 %2"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Felajánló neve"
 
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
