--- a/po/hu_HU/member.po
+++ b/po/hu_HU/member.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:59+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2369,7 +2369,7 @@ msgstr "Kattintson a  <a %1>Bankkártyával fizetett  tagság beküldése</a> a 
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status(s)"
-msgstr ""
+msgstr "Tagság állapot(ok)"
 
 #: CRM/Member/Form/Membership.php
 msgid "Office Credit Card Membership Signup Contribution"
@@ -2391,13 +2391,13 @@ msgstr "Ehhez az online adományhoz kapcsolódó tagsági árlista megengedi a f
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution"
-msgstr ""
+msgstr "Engedélyeznie kell a különálló tagság fizetést, amikor az online adomány oldal a tagságra és az ismétlődő fizetésre is beállított"
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page"
-msgstr ""
+msgstr "Nem engedélyezheti egyszerre az ismétlődő adományokat és  az automatikusan megújuló tagságot egy online adomány oldalon"
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid ""
@@ -2408,7 +2408,7 @@ msgstr "A bankkártyás tagság megújításhoz szükséges a tagsági díj mega
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Includes %1 amount of %2"
-msgstr ""
+msgstr "Tartalmazza %1 összeget %2"
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Office Credit Card Membership Renewal Contribution"
@@ -2478,13 +2478,13 @@ msgstr "Befejező dátum felülírása"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to %1 ?"
-msgstr ""
+msgstr "Automatikusan küldje le e-mailben a tagsági megerősítést és a nyugtát %1 címzettnek?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "OR if the payment is from a different contact, this email will only go to "
 "them."
-msgstr ""
+msgstr "VAGY ha a befizetés másik kapcsolattól érkezett, ez az e-mail csak neki megy el."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "No contacts are currently eligible to inherit this relationship."
