--- a/po/hu_HU/countries.po
+++ b/po/hu_HU/countries.po
@@ -6,14 +6,14 @@
 # András Kéri <keri.andras@gmail.com>, 2012
 # brucezly <brucezly@gmail.com>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013,2015
 # Zoltán Reizinger <zreizinger@hdsnet.hu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 08:18+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1043,8 +1043,8 @@ msgstr "Koszovó"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint Martin (Francia rész)"
