--- a/po/tr_TR/countries.po
+++ b/po/tr_TR/countries.po
@@ -5,15 +5,15 @@
 # Translators:
 # ayhan alkaya <alkayaayhan@yandex.com>, 2013
 # falcon <falconidea@hotmail.com>, 2013
-# Kaya Zeren <kayazeren@gmail.com>, 2014
+# Kaya Zeren <kayazeren@gmail.com>, 2014-2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Selim Şumlu <selim@sum.lu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 07:26+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1043,8 +1043,8 @@ msgstr "Kosova"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint Martin (Fransız bölümü)"
