--- a/po/tr_TR/contribute.po
+++ b/po/tr_TR/contribute.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 07:54+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5146,17 +5146,17 @@ msgstr "Ödeme Aracısı Hatası"
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution."
-msgstr ""
+msgstr "Çevrimiçi katkı sayfası hem Üyelik hem Yinelenen Katkılar için ayarlanmış ise Ayrı Üyelik Ödemesi seçeneğini etkinleştirmelisiniz."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page."
-msgstr ""
+msgstr "Aynı çevrimiçi katkı sayfasında hem Yinelenen Katkı hem Otomatik Üyelik Yenileme etkinleştirilemez."
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Button Text Color"
-msgstr ""
+msgstr "Düğme Metninin Rengi"
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "%count contribution deleted."
