--- a/po/tr_TR/event.po
+++ b/po/tr_TR/event.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 07:36+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1673,7 +1673,7 @@ msgstr "Bu başlık, kullanıcı yeni bir etkinlik oluştururken bir etkinlik ka
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Kalıp"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -3739,7 +3739,7 @@ msgstr "İşlemi Tamamlayın"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Varsayılan Rol Kodu"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
@@ -3855,13 +3855,13 @@ msgstr "Düzenleyebileceğiniz etkinlik ve katılımcıları silme"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "etkinlik profilleri yönetimi"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Kullanıcıların çevrimiçi kayıt için kullanılan etkinlik ile ilgili profil formlarını eklemesini, düzenlemesini ve kopyalamasını sağlar."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
@@ -3929,7 +3929,7 @@ msgstr "Vergi Toplamı"
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "Not: Arama sonuçlarından seçilmiş kişiler burası ile ilişkili değil. Şu ölçütü karşılayan tüm kişiler gruba eklenir."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
@@ -3942,7 +3942,7 @@ msgstr "Alt"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Katılımcı Toplamı"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
