--- a/po/tr_TR/extension.po
+++ b/po/tr_TR/extension.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 07:34+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -81,7 +81,7 @@ msgstr "Eklentinin (%1) İnternet adresi belirlenemedi. Lütfen <a href=\"%2\">K
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "%1 eklentisi işlenirken bir sorun çıktı"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -99,7 +99,7 @@ msgstr "Eklentinin İnternet adresi düzgün ayarlanmamış. Lütfen bu durumu d
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "Eklentiler klasörü belirtilmemiş ya da yazılabilir değil. Eklentiler klasörünü ayarlamak için <a href='%1'>buraya tıklayın</a>."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
